--- a/web/src/app/nav-menu/nav-menu.component.html
+++ b/web/src/app/nav-menu/nav-menu.component.html
@@ -25,6 +25,13 @@
             [routerLinkActive]="['link-active']"
             [routerLinkActiveOptions]="{ exact: true }"
           >
+            <a class="nav-link text-dark" [routerLink]="['new']">Add</a>
+          </li>
+          <li
+            class="nav-item"
+            [routerLinkActive]="['link-active']"
+            [routerLinkActiveOptions]="{ exact: true }"
+          >
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
         </ul>
